--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <div class="flip-content my-4">
                                 <strong class="font-weight-extra-bold  text-13 mb-3 d-inline-block"></strong>
 
-                                <h4 class="font-weight-bold  text-4">DIPLOMADO
+                                <h4 class="font-weight-bold  text-4">DIPLOMADO ON-LINE
                                 </h4>
 
                             </div>
