--- a/paso-1.html
+++ b/paso-1.html
@@ -272,7 +272,7 @@
                                                                 </div>
                                                                 <h4 id="cuentanos"
                                                                     class="text-3 font-weight-semibold text-center mb-3 text-muted">
-                                                                  Consúltanos Sobre el Programa de Formación de tu Interés </h4>
+                                                                  Consúltanos Sobre los Servicios y  el Programa de Formación de tú Interés </h4>
 
                                                                 <form id="contactForm" class="contact-form"
                                                                     action="https://formcarry.com/s/N19MwUjmESk"
