--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>HOSafety</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/logo-light.jpg" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="img/logo-light.jpg">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
