--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     </h2>
                 </div>
                 <div class="col-12 text-center">
-                    <p> Somos una empresa conformada por un equipo multidisciplinario de Técnicos, Ingenieros,  enfermeras, Médicos(as), Abogados y Relacionistas Industriales al servicio de la Seguridad y Salud de los Trabajadores; mediante la formación periódica,  la  prevención, Evaluación y control de riesgos  en los diversos Centros de Trabajo, comprometidos con la conservación del Medio Ambiente.
+                    <p> Somos una empresa conformada por un equipo multidisciplinario de Técnicos, Ingenieros,  Enfermeras, Médicos(as), Abogados y Relacionistas Industriales al Servicio de la Seguridad y Salud de los Trabajadores; mediante la formación periódica,  la  Prevención, Evaluación y Control de Riesgos  en los diversos Centros de Trabajo, comprometidos con la conservación del Medio Ambiente.
 
                     </p>
                 </div>
@@ -364,8 +364,8 @@
                             <div class="flip-content my-4">
                                 <strong class="font-weight-extra-bold  text-13 mb-3 d-inline-block"></strong>
 
-                                <h4 class="font-weight-bold  text-4">DIPLOMADO
-                                    ON-LINE
+                                <h4 class="font-weight-bold  text-4">DIPLOMADO EN SALUD OCUPACIONAL E HIGIENE DEL AMBIENTE LABORAL
+                       
                                 </h4>
 
                             </div>
@@ -379,15 +379,16 @@
                                 <a href="http://api.whatsapp.com/send?phone=+584243523119&text=%20Hola estoy interesado, en tus  servicios"
                                     class="
                                     btn  btn-dark  ">
-                                    Introducción a la Salud Ocupacional. <br>
-                                    Higiene Ocupacional. <br>
-                                    Psicosociología Laboral. <br>
-                                    Seguridad en el Trabajo. <br>
-                                    Ergonomía y Fisiología. <br>
-                                    Epidemiologia. <br>
-                                    Medicina y Toxicología Ocupacional. <br>
-                                    Salud Ocupacional Aplicada. <br>
-                                    Proyecto.
+                                    1. Tecnología de la Información y Comunicación
+                                    2. Desarrollo de las Potencialidades Humanas asociadas a la Salud Ocupacional
+                                    3. Higiene Ocupacional
+                                    4. Seguridad en el Trabajo
+                                    5. Ergonomía
+                                    6. Epidemiologia
+                                    7. Medicina y Toxicología Ocupacional
+                                    8. Salud Ocupacional Aplicada
+                                    9. Proyecto
+
                                 </a>
                             </div>
                         </div>
