--- a/index.html
+++ b/index.html
@@ -379,15 +379,15 @@
                                 <a href="http://api.whatsapp.com/send?phone=+584243523119&text=%20Hola estoy interesado, en tus  servicios"
                                     class="
                                     btn  btn-dark  ">
-                                    1. Tecnología de la Información y Comunicación
-                                    2. Desarrollo de las Potencialidades Humanas asociadas a la Salud Ocupacional
-                                    3. Higiene Ocupacional
-                                    4. Seguridad en el Trabajo
-                                    5. Ergonomía
-                                    6. Epidemiologia
-                                    7. Medicina y Toxicología Ocupacional
-                                    8. Salud Ocupacional Aplicada
-                                    9. Proyecto
+                                    1. Tecnología de la Información y Comunicación <br>
+                                    2. Desarrollo de las Potencialidades Humanas asociadas a la Salud Ocupacional <br>
+                                    3. Higiene Ocupacional <br>
+                                    4. Seguridad en el Trabajo <br>
+                                    5. Ergonomía <br>
+                                    6. Epidemiologia <br>
+                                    7. Medicina y Toxicología Ocupacional <br>
+                                    8. Salud Ocupacional Aplicada <br>
+                                    9. Proyecto 
 
                                 </a>
                             </div>
