--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HOSafety</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="img/logo.jpg">
+    <link rel="apple-touch-icon" src="img/logo-light.jpg">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -298,7 +298,7 @@
                 </div>
                 <div class="col text-center">
                     <p>
-                        Seguridad Laboral, ergonomía, Psicosociología, Higiene Ocupacional y Medicina laboral.
+                        Seguridad Laboral, Ergonomía, Psicosociología, Higiene Ocupacional y Medicina Laboral.
 
 
                     </p>
@@ -342,7 +342,7 @@
                                 <h4 style="color: white;"  class="font-weight-bold ">Expande tu Perfil Profesional</h4>
 
                                 <a  href="http://api.whatsapp.com/send?phone=+584243523119&text=%20Hola estoy interesado, en tus  servicios" class="
-                                    btn  btn-dark  font-weight-bold">Programas de Formación en el ámbito de la Seguridad 
+                                    btn  btn-dark  font-weight-bold">Programas de Formación en el Ambito de la Seguridad 
                                       y Salud Ocupacional; 
                                     bajo tres modalidades: presencial, Semi-presencial y On line.</a>
                             </div>
@@ -379,15 +379,15 @@
                                 <a href="http://api.whatsapp.com/send?phone=+584243523119&text=%20Hola estoy interesado, en tus  servicios"
                                     class="
                                     btn  btn-dark  ">
-                                    1. Tecnología de la Información y Comunicación <br>
-                                    2. Desarrollo de las Potencialidades Humanas asociadas a la Salud Ocupacional <br>
-                                    3. Higiene Ocupacional <br>
-                                    4. Seguridad en el Trabajo <br>
-                                    5. Ergonomía <br>
-                                    6. Epidemiologia <br>
-                                    7. Medicina y Toxicología Ocupacional <br>
-                                    8. Salud Ocupacional Aplicada <br>
-                                    9. Proyecto 
+                                    1. Tecnología de la Información y Comunicación. <br>
+                                    2. Desarrollo de las Potencialidades Humanas asociadas a la Salud Ocupacional. <br>
+                                    3. Higiene Ocupacional. <br>
+                                    4. Seguridad en el Trabajo. <br>
+                                    5. Ergonomía. <br>
+                                    6. Epidemiologia. <br>
+                                    7. Medicina y Toxicología Ocupacional. <br>
+                                    8. Salud Ocupacional Aplicada. <br>
+                                    9. Proyecto.
 
                                 </a>
                             </div>
@@ -462,8 +462,8 @@
 
                                 <a href="http://api.whatsapp.com/send?phone=+584243523119&text=%20Hola estoy interesado, en tus  servicios"
                                     class="
-                                    btn  btn-dark  font-weight-bold"> Identificación, evaluación y control de factores de riesgo: Psicosociales, 
-                                    Disergonómicos,  Químicos, Físicos: Ruido, Iluminación, ambiente térmico.
+                                    btn  btn-dark  font-weight-bold"> Identificación, evaluación y control de factores de riesgo: 
+                                    Disergonómicos,  Químicos, Físicos: Ruido, Iluminación, Ambiente Térmico.
 
                                 </a>
                             </div>
@@ -537,7 +537,8 @@
                                     btn  btn-dark  font-dark-bold">
 
 
-
+                                    Diseño e Implementación del Programa de Seguridad y Salud en el Trabajo.
+                                    <br>
 
                                     Diseño e implementación de Programas de Bioseguridad.
                                     <br>
@@ -546,8 +547,7 @@
                                     sistemas de iluminación en centros de trabajo.
                                     <br>
 
-                                    Diseño e Implementación del Programa de Seguridad y Salud en el Trabajo.
-                                    <br>
+                                    
                                     ENTRE OTROS......
 
                                 </a>
@@ -577,13 +577,13 @@
                         <div  style="background:#09204d;" id="ace" class="flip-back d-flex align-items-center p-5"
                             style="background-image: url(img/generic/generic-corporate-17-1.jpg); background-size: cover; background-position: center;">
                             <div class="flip-content my-4">
-                                <h4 style="color: white;" class="font-weight-bold ">Protección y Control de Perdida</h4>
+                                <h4 style="color: white;" class="font-weight-bold ">Protección y Control de Pérdida</h4>
 
                                 <a href="http://api.whatsapp.com/send?phone=+584243523119&text=%20Hola estoy interesado, en tus  servicios"
                                     class="
                                     btn  btn-dark  font-weight-bold">Protección de intalaciones en prevención
                                     y
-                                    control de perdida ; y de personalidades</a>
+                                    control de pérdida ; y de personalidades</a>
                             </div>
                         </div>
                     </div>
